# petstore

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  regress
petstore/: server.py
tests/: test_petstore.py
tests/expected/: get_pets.json  get_pets_limit_2.json
tests/queries/: get_pets  get_pets_limit_2
